--- a/src/main/webapp/TemplateAdmin.xhtml
+++ b/src/main/webapp/TemplateAdmin.xhtml
@@ -19,20 +19,23 @@
             <div id="logo">
                 <ul>
                     <li id="logoimg">       
-                        <a  href="#">M<img src="images/discos-compactos1.png" />re music</a>
+                        <a  href="ClientAdminInicio.xhtml">M<img src="images/discos-compactos1.png" />re music</a>
                     </li>
                 </ul>
             </div>
             <div id="menu">
                 <ul>
                     <li id="item-uno">       
-                        <a href="#" >Salir <img class="img" src="images/cerrar-sesion.png" /></a>
+                        <a href="ClientInicio.xhtml" >Salir <img class="img" src="images/cerrar-sesion.png" /></a>
                     </li>
                     <li id="item-dos">
-                        <a href="#">Discos<img class="img" src="images/album.png" /></a>
+                        <a href="AdminCancion.xhtml">Canciones<img class="img" src="images/cancion.png" /></a>
                     </li>
-                    <li id="item-tres">       
-                        <a href="#" >Artistas <img class="img" src="images/personaje.png" /></a>
+                    <li id="item-tres">
+                        <a href="AdminDisco.xhtml">Discos<img class="img" src="images/album.png" /></a>
+                    </li>
+                    <li id="item-cuatro">       
+                        <a href="AdminArtista.xhtml" >Artistas <img class="img" src="images/personaje.png" /></a>
                     </li>
 
                 </ul>
